--- a/text/index.html
+++ b/text/index.html
@@ -268,6 +268,13 @@
         </p>
         <h1>Releases information</h1>
 
+    	<h3>Release 2.1.3 (2018-05-05)</h3>
+    	<ul>
+    		<li>When loading xml files, don't load external entities (security issue).</li>
+    		<li>Added support for IBM/Telelogic DOORS scripting language (patch by epvo).</li>
+    	</ul>
+        <br>
+
     	<h3>Release 2.1.2 (2017-11-28)</h3>
     	<ul>
     		<li>Fix issue on partitioning when requesting a sub-region.</li>
