--- a/scripts/history.html
+++ b/scripts/history.html
@@ -14,6 +14,17 @@
     <body>
     <h3>Releases history</h3>
 
+        <h3>Release Highlights for LiClipse 4.5.3</h3>
+        <ul>
+        	<li>Updated PyDev to 6.3.3.</li>
+        	<ul>
+        	    <li>Fix in debugger conditional breakpoints.</li>
+        	    <li>Fix in racing condition on jython scripting.</li>
+        	    <li>Fix in code formatter with matrix multiplication operator.</li>
+        	    <li>See <a href="http://www.pydev.org">http://www.pydev.org</a> for more details.</li>
+        	</ul>
+        </ul>
+
         <h3>Release Highlights for LiClipse 4.5.2</h3>
         <ul>
         	<li>Updated PyDev to 6.3.1.</li>
